--- a/api/package.json
+++ b/api/package.json
@@ -56,7 +56,7 @@
     "prettier": "^2.6.2"
   },
   "engines": {
-    "node": ">=14.x",
+    "node": ">=18.18.0 <19.0.0",
     "npm": ">=6.x"
   },
   "eslintConfig": {
