--- a/api/package.json
+++ b/api/package.json
@@ -2,7 +2,7 @@
   "name": "asuna-api",
   "version": "1.1.1",
   "description": "API for Asuna",
-  "main": "src/server.js",
+  "main": "src/package.json",
   "private": true,
   "scripts": {
     "start": "node src/server",
