--- a/api/.env.development
+++ b/api/.env.development
@@ -3,7 +3,7 @@ NODE_ENV=development
 PORT=3000
 
 # Client-side
-CLIENT_SIDE_URL=https://buillding-test.onrender.com
+CLIENT_SIDE_URL=http://localhost:3001
 
 # Database connections
 DATABASE_USERNAME=
@@ -12,6 +12,6 @@ DATABASE_LOCAL=
 DATABASE=
 
 # JWT
-JWT_SECRET=Luuhuy@1234
-JWT_EXPIRES_IN=604800
-JWT_COOKIE_EXPIRES_IN=604800
+JWT_SECRET=
+JWT_EXPIRES_IN=
+JWT_COOKIE_EXPIRES_IN=
