--- a/api/package.json
+++ b/api/package.json
@@ -2,7 +2,7 @@
   "name": "asuna-api",
   "version": "1.1.1",
   "description": "API for Asuna",
-  "main": "src/package.json",
+  "main": "src/server.js",
   "private": true,
   "scripts": {
     "start": "node src/server",
@@ -56,7 +56,7 @@
     "prettier": "^2.6.2"
   },
   "engines": {
-    "node": ">=18 <19.0.0",
+    "node": ">=14.x",
     "npm": ">=6.x"
   },
   "eslintConfig": {
