--- a/web/.env.development
+++ b/web/.env.development
@@ -2,7 +2,7 @@
 JWT_COOKIE_EXPIRES_IN=24
 
 # Private APIs
-PRIVATE_API_URL=http://localhost:3000
+PRIVATE_API_URL=https://buillding-test-api-backend.onrender.com
 
 # Public APIs
-NEXT_PUBLIC_API_URL=http://localhost:3000
+NEXT_PUBLIC_API_URL=https://buillding-test-api-backend.onrender.com
