--- a/api/.env.development
+++ b/api/.env.development
@@ -3,15 +3,15 @@ NODE_ENV=development
 PORT=3000
 
 # Client-side
-CLIENT_SIDE_URL=http://localhost:3001
+CLIENT_SIDE_URL=https://buillding-test.vercel.app
 
 # Database connections
 DATABASE_USERNAME=
 DATABASE_PASSWORD=
 DATABASE_LOCAL=
-DATABASE=
+DATABASE=mongodb+srv://baoden8x:TqXvv4uaTntjlUa0@cluster0.qqiqs.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 
 # JWT
-JWT_SECRET=
-JWT_EXPIRES_IN=
-JWT_COOKIE_EXPIRES_IN=
+JWT_SECRET=c115481d4170da28004c509a4a36ac3d
+JWT_EXPIRES_IN=3600
+JWT_COOKIE_EXPIRES_IN=86400
