--- a/api/.env.development
+++ b/api/.env.development
@@ -9,7 +9,7 @@ CLIENT_SIDE_URL=https://buillding-test.vercel.app
 DATABASE_USERNAME=
 DATABASE_PASSWORD=
 DATABASE_LOCAL=
-DATABASE=mongodb+srv://baoden8x:TqXvv4uaTntjlUa0@cluster0.qqiqs.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+DATABASE=mongodb+srv://baoden8x:27peOijTRsE5Jrhg@cluster0.qqiqs.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 
 # JWT
 JWT_SECRET=c115481d4170da28004c509a4a36ac3d
